[package]
name = "remap-omen"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
winapi = { version = "0.3", features = ["winuser"] }
wmi = "0.13"

[build-dependencies]
winres = "0.1"
